--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
  * Esta é a camada de apresentação da aplicação. Define toda a estrutura
  * visual e semântica da interface do usuário.
  * 
- * POR QUE EXISTE:
+ * Responsabilidades:
  * - Fornecer interface amigável para usuários interagirem com a agenda
  * - Estruturar semanticamente o conteúdo (acessibilidade e SEO)
  * - Separar apresentação (HTML) de estilo (CSS) e comportamento (JS)
@@ -51,6 +51,9 @@
 
     <!-- Ícones Lucide via CDN -->
     <script src="https://unpkg.com/lucide@latest"></script>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/assets/favico.ico">
 </head>
 
 <body class="gradient-bg min-h-screen font-sans antialiased">
@@ -96,7 +99,8 @@
          Dividido em duas seções principais: Cadastro e Listagem
     -->
     <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 max-w-7xl">
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+        <!-- Use a single main column; internal sections will adapt responsively -->
+        <div class="grid grid-cols-1 gap-8">
 
             <!-- ============================================
                  SEÇÃO 1: FORMULÁRIO DE CADASTRO
@@ -104,70 +108,7 @@
                  Permite criar novos contatos ou editar existentes
                  Validações: nome obrigatório, idade numérica, telefones 10-11 dígitos
             -->
-            <section id="formCadastro"
-                class="bg-slate-800/80 backdrop-blur-sm rounded-2xl shadow-2xl p-6 sm:p-8 border border-slate-700">
-                <div class="flex items-center justify-between mb-6">
-                    <div class="flex items-center space-x-3">
-                        <div class="bg-gradient-to-br from-blue-500 to-blue-700 p-2.5 rounded-lg">
-                            <i data-lucide="user-plus" class="w-6 h-6 text-white"></i>
-                        </div>
-                        <h2 id="tituloFormulario" class="text-2xl font-bold text-white">Novo Contato</h2>
-                    </div>
-                </div>
-
-                <form id="formContato" onsubmit="event.preventDefault(); salvarContato();" class="space-y-5">
-                    <!-- Campo: Nome -->
-                    <div>
-                        <label for="nome" class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2">
-                            <i data-lucide="user" class="w-4 h-4"></i>
-                            Nome Completo
-                        </label>
-                        <input type="text" id="nome" required placeholder="Ex: João Silva"
-                            class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all">
-                    </div>
-
-                    <!-- Campo: Idade -->
-                    <div>
-                        <label for="idade"
-                            class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2">
-                            <i data-lucide="calendar" class="w-4 h-4"></i>
-                            Idade
-                        </label>
-                        <input type="number" id="idade" required min="1" max="150" placeholder="Ex: 25"
-                            class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all">
-                    </div>
-
-                    <!-- Campo: Telefones -->
-                    <div>
-                        <label for="telefones"
-                            class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2">
-                            <i data-lucide="phone" class="w-4 h-4"></i>
-                            Telefones
-                        </label>
-                        <textarea id="telefones" required rows="4"
-                            placeholder="Digite um ou mais telefones (um por linha)&#10;Ex: (11) 98765-4321&#10;     (11) 3456-7890"
-                            class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all resize-none"></textarea>
-                        <p class="mt-2 text-xs text-slate-400">
-                            <i data-lucide="info" class="w-3 h-3 inline"></i>
-                            Telefones devem ter 10 ou 11 dígitos. Separe múltiplos números por linha ou vírgula.
-                        </p>
-                    </div>
-
-                    <!-- Botões de Ação -->
-                    <div class="flex gap-3 pt-4">
-                        <button type="submit" id="btnSalvar"
-                            class="flex-1 gradient-primary text-white px-6 py-3 rounded-lg font-medium hover:opacity-90 transition-all flex items-center justify-center gap-2 shadow-lg">
-                            <i data-lucide="save" class="w-5 h-5"></i>
-                            <span>Salvar Contato</span>
-                        </button>
-                        <button type="button" onclick="cancelarEdicao()"
-                            class="bg-slate-700 hover:bg-slate-600 text-slate-300 px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center gap-2">
-                            <i data-lucide="x" class="w-5 h-5"></i>
-                            <span>Limpar</span>
-                        </button>
-                    </div>
-                </form>
-            </section>
+            
 
             <!-- ============================================
                  SEÇÃO 2: PESQUISA E LISTAGEM DE CONTATOS
@@ -177,25 +118,31 @@
             <section class="space-y-6">
                 <!-- Barra de Pesquisa -->
                 <div class="bg-slate-800/80 backdrop-blur-sm rounded-2xl shadow-2xl p-6 border border-slate-700">
-                    <div class="flex items-center space-x-3 mb-4">
-                        <div class="bg-gradient-to-br from-blue-500 to-blue-700 p-2.5 rounded-lg">
-                            <i data-lucide="search" class="w-6 h-6 text-white"></i>
+                    <!-- Cabeçalho: título à esquerda e Novo Contato à direita -->
+                    <div class="flex flex-col sm:flex-row items-stretch sm:items-center justify-between mb-4 gap-3">
+                        <div class="flex items-center space-x-3">
+                            <div class="bg-gradient-to-br from-blue-500 to-blue-700 p-2.5 rounded-lg">
+                                <i data-lucide="search" class="w-6 h-6 text-white"></i>
+                            </div>
+                            <h2 class="text-2xl font-bold text-white">Pesquisar Contatos</h2>
                         </div>
-                        <h2 class="text-2xl font-bold text-white">Pesquisar Contatos</h2>
+                        <button onclick="mostrarFormulario()"
+                            class="w-full sm:w-auto gradient-primary text-white px-6 py-3 rounded-lg font-medium hover:opacity-90 transition-all flex items-center justify-center gap-2">
+                            <i data-lucide="user-plus" class="w-5 h-5"></i>
+                            <span>Novo Contato</span>
+                        </button>
                     </div>
 
-                    <div class="flex gap-2">
-                        <input type="text" id="termoPesquisa" placeholder="Digite nome ou telefone..."
-                            onkeyup="if(event.key === 'Enter') pesquisarContatos()"
-                            class="flex-1 px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all">
-                        <button onclick="pesquisarContatos()"
-                            class="gradient-primary text-white px-6 py-3 rounded-lg font-medium hover:opacity-90 transition-all flex items-center gap-2">
-                            <i data-lucide="search" class="w-5 h-5"></i>
-                            <span class="hidden sm:inline">Buscar</span>
-                        </button>
-                        <button onclick="carregarContatos()"
-                            class="bg-slate-700 hover:bg-slate-600 text-slate-300 px-6 py-3 rounded-lg font-medium transition-colors flex items-center gap-2">
-                            <i data-lucide="refresh-cw" class="w-5 h-5"></i>
+                    <!-- Linha abaixo: campo de busca e botão Limpar -->
+                    <div class="flex flex-col sm:flex-row gap-2 items-stretch" role="search" aria-label="Pesquisar contatos">
+                        <div class="relative flex-1 min-w-0">
+                            <i data-lucide="search" aria-hidden="true" class="w-5 h-5 text-slate-400 absolute left-3 top-1/2 -translate-y-1/2 pointer-events-none"></i>
+                            <input type="text" id="termoPesquisa" placeholder="Digite nome ou telefone..." aria-label="Pesquisar contatos por nome ou telefone" inputmode="search" enterkeyhint="search" autocomplete="off"
+                                class="w-full pl-10 pr-4 py-4 sm:py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all text-base sm:text-sm">
+                        </div>
+                        <button onclick="document.getElementById('termoPesquisa').value=''; carregarContatos()"
+                            class="w-full sm:w-auto bg-slate-700 hover:bg-slate-600 text-slate-300 px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center gap-2">
+                            <i data-lucide="x" class="w-5 h-5"></i>
                             <span class="hidden sm:inline">Limpar</span>
                         </button>
                     </div>
@@ -210,8 +157,9 @@
                         <h2 class="text-2xl font-bold text-white">Meus Contatos</h2>
                     </div>
 
-                    <!-- Grid de Cards (preenchido dinamicamente via JavaScript) -->
-                    <div id="listaContatos" class="grid grid-cols-1 gap-4">
+                <!-- Grid de Cards (preenchido dinamicamente via JavaScript)
+                    Responsivo: 1 coluna (mobile), 2 (tablet), 3 (desktop) -->
+                <div id="listaContatos" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
                         <!-- Cards serão inseridos aqui via JavaScript -->
                         <div class="text-center py-12">
                             <i data-lucide="loader" class="w-16 h-16 mx-auto mb-4 text-slate-600 animate-spin"></i>
@@ -243,6 +191,79 @@
             </div>
         </div>
     </footer>
+
+        <!-- ============================================
+             MODAL: FORMULÁRIO DE CONTATO (FULLSCREEN OVERLAY)
+             ============================================ -->
+        <div id="modalForm" class="hidden fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-50 flex items-center justify-center p-4">
+            <div id="formCadastro" class="bg-slate-800/90 rounded-2xl shadow-2xl w-full max-w-2xl max-h-[90vh] overflow-y-auto border border-slate-700 animate-fade-in">
+                <div class="p-6 sm:p-8">
+                    <div class="flex items-center justify-between mb-6">
+                        <div class="flex items-center space-x-3">
+                            <div class="bg-gradient-to-br from-blue-500 to-blue-700 p-2.5 rounded-lg">
+                                <i data-lucide="user-plus" class="w-6 h-6 text-white"></i>
+                            </div>
+                            <h2 id="tituloFormulario" class="text-2xl font-bold text-white">Novo Contato</h2>
+                        </div>
+                        <button type="button" onclick="fecharModalForm()" class="text-slate-300 hover:text-white p-2 rounded-lg hover:bg-slate-700 transition-colors" aria-label="Fechar">
+                            <i data-lucide="x" class="w-5 h-5"></i>
+                        </button>
+                    </div>
+
+                    <form id="formContato" onsubmit="event.preventDefault(); salvarContato();" class="space-y-5">
+                        <input type="hidden" id="contatoIdHidden" value="">
+                        <!-- Campo: Nome -->
+                        <div>
+                            <label for="nome" class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2">
+                                <i data-lucide="user" class="w-4 h-4"></i>
+                                Nome Completo
+                            </label>
+                            <input type="text" id="nome" required placeholder="Ex: João Silva"
+                                class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all">
+                        </div>
+
+                        <!-- Campo: Idade -->
+                        <div>
+                            <label for="idade" class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2">
+                                <i data-lucide="calendar" class="w-4 h-4"></i>
+                                Idade (opcional)
+                            </label>
+                            <input type="number" id="idade" min="1" max="150" placeholder="Ex: 25"
+                                class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all">
+                        </div>
+
+                        <!-- Campo: Telefones -->
+                        <div>
+                            <label for="telefones" class="block text-sm font-medium text-slate-300 mb-2 flex items-center gap-2">
+                                <i data-lucide="phone" class="w-4 h-4"></i>
+                                Telefones
+                            </label>
+                            <textarea id="telefones" required rows="4"
+                                placeholder="Digite um ou mais telefones (um por linha)&#10;Ex: (11) 98765-4321&#10;     (11) 3456-7890"
+                                class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all resize-none"></textarea>
+                            <p class="mt-2 text-xs text-slate-400">
+                                <i data-lucide="info" class="w-3 h-3 inline"></i>
+                                Telefones devem ter 10 ou 11 dígitos. Separe múltiplos números por linha.
+                            </p>
+                        </div>
+
+                        <!-- Botões de Ação -->
+                        <div class="flex gap-3 pt-4">
+                            <button type="submit" id="btnSalvar"
+                                class="flex-1 gradient-primary text-white px-6 py-3 rounded-lg font-medium hover:opacity-90 transition-all flex items-center justify-center gap-2 shadow-lg">
+                                <i data-lucide="save" class="w-5 h-5"></i>
+                                <span>Salvar Contato</span>
+                            </button>
+                            <button type="button" onclick="cancelarEdicao()"
+                                class="bg-slate-700 hover:bg-slate-600 text-slate-300 px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center gap-2">
+                                <i data-lucide="x" class="w-5 h-5"></i>
+                                <span>Cancelar</span>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 
     <!-- ============================================
          MODAL: EXPORTAR DADOS
@@ -323,11 +344,6 @@
         </div>
     </div>
 
-    <!-- ============================================
-         SCRIPTS
-         ============================================
-         Carregamento da lógica JavaScript
-    -->
     <script src="app.js"></script>
 </body>
 
